// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters should filter data for given month 1`] = `
Array [
  Object {
    "months": Array [
      "january",
      "march",
    ],
    "name": "banana",
    "seasons": Array [
      "autumn",
      "summer",
    ],
    "type": "fruit",
  },
]
`;

exports[`Filters should filter data for given month 2`] = `Array []`;

exports[`Filters should filter data for given season 1`] = `
Array [
  Object {
    "months": Array [
      "january",
      "march",
    ],
    "name": "banana",
    "seasons": Array [
      "autumn",
      "summer",
    ],
    "type": "fruit",
  },
]
`;

exports[`Filters should filter data for given season 2`] = `
Array [
  Object {
    "months": Array [
      "december",
      "november",
    ],
    "name": "carrot",
    "seasons": Array [
      "autumn",
      "spring",
    ],
    "type": "vegetable",
  },
]
`;

exports[`Filters should filter data for given type 1`] = `
Array [
  Object {
    "months": Array [
      "april",
      "may",
    ],
    "name": "apple",
    "seasons": Array [
      "autumn",
    ],
    "type": "fruit",
  },
  Object {
    "months": Array [
      "january",
      "march",
    ],
    "name": "banana",
    "seasons": Array [
      "autumn",
      "summer",
    ],
    "type": "fruit",
  },
]
`;

exports[`Filters should filter data for given type 2`] = `
Array [
  Object {
    "months": Array [
      "december",
      "november",
    ],
    "name": "carrot",
    "seasons": Array [
      "autumn",
      "spring",
    ],
    "type": "vegetable",
  },
]
`;
